--- a/assets/scss/cart.scss
+++ b/assets/scss/cart.scss
@@ -19,8 +19,8 @@
             text-align: center;
             transition: 0.6s all;
             cursor: pointer;
-            &:hover{
-                background: #eb4d4b;
+            &:hover {
+              background: #eb4d4b;
             }
           }
           .second {
@@ -32,67 +32,77 @@
             text-align: center;
             transition: 0.6s all;
             cursor: pointer;
-            &:hover{
-                background: red;
+            &:hover {
+              background: red;
             }
           }
         }
       }
     }
   }
-
-
 }
 
-.container{
-  .row{
-    .accordion{
-      .devices_info{
-        .cart_info_faq_title{
+.container {
+  .row {
+    .accordion {
+      .devices_info {
+        .cart_info_faq_title {
           display: flex;
           justify-content: space-between;
           height: 40px;
           border: 1px solid #e0dada;
         }
       }
-      .cart_info_{
+      .cart_info_ {
         display: none;
-      }
-      .active{
-        display: block;
-      }
-    }
-    .cart-bottom {
-      position: sticky;
-      bottom: 0px;
-      width: 100%;
-      height: 30%;
-      border-top: 1px solid #eee;
-      background-color: white;
-      ul {
-        line-height: 30px;
-        font-size: 15px;
-        padding: 0;
-        margin: 0;
-        li {
-          margin: 0;
-          display: flex;
-          justify-content: space-between;
-          span:nth-child(even) {
-            font-weight: 500;
+        border: 1px solid #e5e5e5;
+        padding: 20px;
+        .inputs {
+          input {
+            border: 1px solid rgb(214, 210, 210);
+            width: 80%;
+            height: 30px;
+            &::placeholder {
+              font-size: 14px;
+            }
+          }
+          button {
+            width: 20%;
+            font-size: 14px;
+            height: 30px;
+            border: none;
+            background-color: #232323;
+            color: white;
+            transition: 0.5s;
+            &:hover {
+              background-color: #eb4d50;
+            }
           }
         }
-      }
-      .buttons {
-        width: 100%;
-        padding: 10px 0;
-        display: flex;
-        justify-content:flex-end;
-        align-items: center;
+        .first,
+        .second {
+          .selection {
+            select {
+              border: 1px solid rgb(214, 210, 210);
+              width: 100%;
+              option {
+                font-size: 14px;
+                color: rgb(160, 157, 157);
+              }
+            }
+          }
+        }
+        .third {
+          .inputs {
+            input {
+              border: 1px solid rgb(214, 210, 210);
+            }
+          }
+        }
         button {
           font-size: 14px;
           height: 40px;
-          width: 49%;
+          width: 20%;
           border: none;
           background-color: #232323;
           color: white;
@@ -100,6 +110,57 @@
           &:hover {
             background-color: #eb4d50;
           }
+        }
+      }
+    }
+    
+    .cart-bottom {
+      width: 100%;
+      height: 30%;
+      background-color: white;
+      display: flex;
+      ul {
+        width: 50%;
+        line-height: 32px;
+        font-size: 17px;
+        padding: 0px;
+        margin-top: 8px;
+        li {
+          padding: 5;
+          display: flex;
+          justify-content: flex-end;
+          border: 1px solid rgb(221, 220, 220);
+          
+        }
+      }
+    }
+    .buttons {
+      padding: 10px 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      margin-top: 30px;
+
+      button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px 30px;
+        font-size: 14px;
+        height: 40px;
+        border: none;
+        background-color: #232323;
+        color: white;
+        transition: 0.5s;
+        &:hover {
+          background-color: #eb4d50;
+        }
+      }
+      .first_btn{
+        background-color: #eb4d50;
+        &:hover {
+          background-color: #232323;
         }
       }
     }
