--- a/assets/scss/_collections.scss
+++ b/assets/scss/_collections.scss
@@ -1,3 +1,246 @@
 @import "./header";
 @import "./footer";
 @import "./clipboard";
+
+#collection {
+  margin-top: 100px;
+  .left {
+    .collection_ctgr {
+      padding-bottom: 5px;
+      border: 1px solid #dfdfdf;
+
+      h5 {
+        color: #555;
+        background-color: #f5f5f5;
+        padding: 10px;
+      }
+    }
+
+    .collection_refine {
+      margin-top: 30px;
+      border: 1px solid #dfdfdf;
+
+      h5 {
+        color: #555;
+        background-color: #f5f5f5;
+        padding: 10px;
+      }
+      .buttons {
+        transition: 0.7s;
+        border: none;
+        margin-top: 20px;
+        margin: 20px 10px 15px;
+        border-radius: 0;
+        background-color: #232323;
+        height: 34px;
+        display: flex;
+        justify-content: center;
+
+        &:hover {
+          background-color: #eb4d4b;
+        }
+      }
+
+      .items {
+        label {
+          color: #888;
+          margin-left: 3px;
+        }
+
+        padding-left: 10px;
+      }
+    }
+    .collections_lastsellers {
+      margin-top: 403px;
+    }
+    .collections_bestsellers {
+      margin-top: 30px;
+    }
+    .collections_bestsellers,
+    .collections_lastsellers {
+      border: 1px solid #dfdfdf;
+
+      h5 {
+        color: #555;
+        background-color: #f5f5f5;
+        font-size: 18px;
+        font-weight: 500;
+        padding: 10px;
+      }
+
+      .device {
+        .image {
+          padding: 10px;
+          display: flex;
+          width: 85px;
+          height: 85px;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .text {
+          margin-left: 10px;
+
+          span {
+            display: block;
+            font-weight: 400;
+            font-family: "Poppins", sans-serif;
+          }
+
+          .red {
+            color: #eb4d4b;
+            font-weight: 500;
+          }
+          .price {
+            display: flex;
+            .line {
+              margin-left: 3px;
+              color: #888;
+              text-decoration: line-through;
+            }
+          }
+        }
+      }
+    }
+
+    .big_discount {
+      margin-top: 30px;
+      .image {
+        position: relative;
+        img {
+          width: 100%;
+          position: absolute;
+        }
+        .img {
+            width: 260px;
+            height: 337px;
+          transition: 1s all;
+        }
+        &:hover {
+          .img {
+            width: 260px;
+            height: 337px;
+            transform: rotateY(180deg);
+            position: absolute;
+            background-color: #6b68683f;
+          }
+        }
+      }
+    }
+
+    .showPages {
+      margin-top: 30px;
+      padding: 8px 16px;
+      background-color: #f5f5f5;
+      p {
+        padding-top: 14px;
+      }
+    }
+  }
+  .right {
+    .device {
+      padding: 0px;
+      height: 270px;
+      position: relative;
+      position: relative;
+      .image {
+        height: 100%;
+        position: relative;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+
+        .first {
+          position: absolute;
+          opacity: 1;
+          transition: 1s all;
+        }
+        .second {
+          position: absolute;
+          opacity: 0;
+          transition: 1s all;
+        }
+        &:hover {
+          .first {
+            opacity: 0;
+            transform: rotateY(180deg);
+          }
+          .second {
+            opacity: 1;
+            transform: rotateY(180deg);
+          }
+        }
+        cursor: pointer;
+      }
+      .rating {
+        position: absolute;
+        bottom: 8px;
+        left: 50%;
+        transform: translateX(-50%);
+        .yellow {
+          color: yellow;
+        }
+      }
+      .buttons {
+        position: absolute;
+        left: auto;
+        right: 13px;
+        top: -36px;
+        display: block;
+        .allbutton {
+          border: 1px solid black;
+          padding: 8px;
+          border-radius: 50%;
+          margin-top: 5px;
+          opacity: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          transition: 0.5s all;
+          cursor: pointer;
+          &:hover {
+            background-color: #eb4d4b;
+          }
+        }
+      }
+      .allbutton.active {
+        opacity: 1;
+      }
+    }
+    .caption {
+      padding: 10px;
+      .add_cart {
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #eb4d4b;
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%);
+        bottom: -77px;
+        transition: 0.5s all;
+        overflow: hidden;
+        opacity: 0;
+        height: 35px;
+        width: 120px;
+        cursor: pointer;
+      }
+      .add_cart.active {
+        opacity: 1;
+      }
+      .description {
+        margin-bottom: 10px;
+      }
+      .price {
+        color: #eb4d4b;
+        font-size: 16px;
+        margin-bottom: 5px;
+        transition: all 0.4s;
+        opacity: 1;
+      }
+    }
+  }
+}
